# gen_studies

./: .gitignore  .gitmodules  README.md  env.yaml  lhe.code-workspace  pyproject.toml  setup.sh
analysis/: analysis.py  osww.py  process.py  run.py  utils.py
configs/: osww.py
configs/HH_lhe/: config.py
configs/osww/: config.py
fit/: fit2.py  fit_pyhf.py  plot.py  prepare_pyhf.py
gp_submission/: read.py  run.sh  submit.jdl
plot/: makeplot.py  plot.py  run.py  utils.py
src/gen_studies/: __init__.py  version.py
src/gen_studies/analysis/: check_config.py  process.py  run.py  utils.py
src/gen_studies/configs/: config.py  create.py
src/gen_studies/fit/: datacards.py  plot.py  run.py  utils.py
src/gen_studies/plot/: plot_variations.py  run.py  utils.py
