[build-system]
# requires = ["setuptools >= 61.0"]
# build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen_studies"
description = "Scripts and configurations of various analysis at gen level for EFT"
version = "2024.6.1"
dependencies = [
    "awkward==2.6.3",
    "awkward-cpp==32",
    "ruff",
    "boost-histogram==1.4.1",
    "hist==2.7.2",
    "matplotlib==3.9.0",
    "mplhep==0.3.48",
    "numpy==1.26.4",
    "uproot==5.3.3",
    "vector==1.3.1",
]
authors = [
    {name = "Giorgio Pizzati", email = "giorgio.pizzati@cern.ch"},
]
maintainers = [
    {name = "Giorgio Pizzati", email = "giorgio.pizzati@cern.ch"}
]
readme = "README.md"

requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_studies"]

[project.scripts]
run-analysis = "gen_studies.analysis.run:main"
run-plot = "gen_studies.plot.run:main"
run-plot-variations = "gen_studies.plot.plot_variations:main"
# fit-cards = "gen_studies.fit.datacards:main"
# fit-plot = "gen_studies.fit.plot:main"

[tool.ruff]
src = ["src/gen_studies"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "W", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
