[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gen_studies"
description = "Scripts and configurations of various analysis at gen level for EFT"
dynamic = ["version"]
dependencies = [
    "awkward==2.6.3",
    "awkward-cpp==32",
    "ruff",
    "boost-histogram==1.4.1",
    "hist==2.7.2",
    "matplotlib==3.9.0",
    "mplhep==0.3.48",
    "numpy==1.26.4",
    "uproot==5.3.3",
    "vector==1.3.1",
    "numba",
    "scikit-learn",
]

authors = [
    {name = "Giorgio Pizzati", email = "giorgio.pizzati@cern.ch"},
]
maintainers = [
    {name = "Giorgio Pizzati", email = "giorgio.pizzati@cern.ch"}
]
readme = "README.md"

requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_studies"]

[project.scripts]
gs-config-create = "gen_studies.configs.create:main"
gs-config-check = "gen_studies.configs.check:main"
gs-analysis-run = "gen_studies.analysis.run:main"
gs-plot-run = "gen_studies.plot.run:main"
gs-plot-variations = "gen_studies.plot.plot_variations:main"
gs-fit-makecards = "gen_studies.fit.datacards:main"
gs-fit-run = "gen_studies.fit.run:main"
gs-fit-plot = "gen_studies.fit.plot:main"

[tool.ruff]
src = ["src/gen_studies"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.hatch.version]
path = "src/gen_studies/__init__.py"
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gen_studies/version.py"
